// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentCard renders a single activity 1`] = `
<div
  className="container"
>
  <div
    className="typeAndId"
  >
    <div
      className="type"
    >
      MyType
    </div>
    <div
      className="id"
    >
      00 01 A
    </div>
  </div>
  <div>
    <h6
      className="title"
    >
      Document Title ABC
    </h6>
  </div>
  <div
    className="dash"
  >
    <hr
      className="decorativeDash"
    />
  </div>
  <div
    className="details"
  >
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Program:
      </div>
      <div
        className="columnTwo"
      >
        Program 1, Program 2
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Activity:
      </div>
      <div
        className="columnTwo"
      >
        test1
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Summary:
      </div>
      <div
        className="columnTwo"
      >
        Document Summary
      </div>
    </div>
  </div>
  <div
    className="download"
  >
    <a
      className="link"
    >
      Download PDF
    </a>
    <i
      className="pdf fa fa-file-pdf-o"
    />
  </div>
</div>
`;

exports[`DocumentCard renders a single program 1`] = `
<div
  className="container"
>
  <div
    className="typeAndId"
  >
    <div
      className="type"
    >
      MyType
    </div>
    <div
      className="id"
    >
      00 01 A
    </div>
  </div>
  <div>
    <h6
      className="title"
    >
      Document Title ABC
    </h6>
  </div>
  <div
    className="dash"
  >
    <hr
      className="decorativeDash"
    />
  </div>
  <div
    className="details"
  >
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Program:
      </div>
      <div
        className="columnTwo"
      >
        test1
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Summary:
      </div>
      <div
        className="columnTwo"
      >
        Document Summary
      </div>
    </div>
  </div>
  <div
    className="download"
  >
    <a
      className="link"
    >
      Download PDF
    </a>
    <i
      className="pdf fa fa-file-pdf-o"
    />
  </div>
</div>
`;

exports[`DocumentCard renders default data 1`] = `
<div
  className="container"
>
  <div
    className="typeAndId"
  >
    <div
      className="type"
    >
      MyType
    </div>
    <div
      className="id"
    >
      00 01 A
    </div>
  </div>
  <div>
    <h6
      className="title"
    >
      Document Title ABC
    </h6>
  </div>
  <div
    className="dash"
  >
    <hr
      className="decorativeDash"
    />
  </div>
  <div
    className="details"
  >
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Program:
      </div>
      <div
        className="columnTwo"
      >
        Program 1, Program 2
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Summary:
      </div>
      <div
        className="columnTwo"
      >
        Document Summary
      </div>
    </div>
  </div>
  <div
    className="download"
  >
    <a
      className="link"
    >
      Download PDF
    </a>
    <i
      className="pdf fa fa-file-pdf-o"
    />
  </div>
</div>
`;

exports[`DocumentCard renders no activitys when none are given 1`] = `
<div
  className="container"
>
  <div
    className="typeAndId"
  >
    <div
      className="type"
    >
      MyType
    </div>
    <div
      className="id"
    >
      00 01 A
    </div>
  </div>
  <div>
    <h6
      className="title"
    >
      Document Title ABC
    </h6>
  </div>
  <div
    className="dash"
  >
    <hr
      className="decorativeDash"
    />
  </div>
  <div
    className="details"
  >
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Program:
      </div>
      <div
        className="columnTwo"
      >
        Program 1, Program 2
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Summary:
      </div>
      <div
        className="columnTwo"
      >
        Document Summary
      </div>
    </div>
  </div>
  <div
    className="download"
  >
    <a
      className="link"
    >
      Download PDF
    </a>
    <i
      className="pdf fa fa-file-pdf-o"
    />
  </div>
</div>
`;

exports[`DocumentCard renders the summary 1`] = `
<div
  className="container"
>
  <div
    className="typeAndId"
  >
    <div
      className="type"
    >
      MyType
    </div>
    <div
      className="id"
    >
      00 01 A
    </div>
  </div>
  <div>
    <h6
      className="title"
    >
      Document Title ABC
    </h6>
  </div>
  <div
    className="dash"
  >
    <hr
      className="decorativeDash"
    />
  </div>
  <div
    className="details"
  >
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Program:
      </div>
      <div
        className="columnTwo"
      >
        Program 1, Program 2
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Summary:
      </div>
      <div
        className="columnTwo"
      >
        This is a different summary
      </div>
    </div>
  </div>
  <div
    className="download"
  >
    <a
      className="link"
    >
      Download PDF
    </a>
    <i
      className="pdf fa fa-file-pdf-o"
    />
  </div>
</div>
`;

exports[`DocumentCard renders the title 1`] = `
<div
  className="container"
>
  <div
    className="typeAndId"
  >
    <div
      className="type"
    >
      MyType
    </div>
    <div
      className="id"
    >
      00 01 A
    </div>
  </div>
  <div>
    <h6
      className="title"
    >
      This is a different title
    </h6>
  </div>
  <div
    className="dash"
  >
    <hr
      className="decorativeDash"
    />
  </div>
  <div
    className="details"
  >
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Program:
      </div>
      <div
        className="columnTwo"
      >
        Program 1, Program 2
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="columnOne"
      >
        Summary:
      </div>
      <div
        className="columnTwo"
      >
        Document Summary
      </div>
    </div>
  </div>
  <div
    className="download"
  >
    <a
      className="link"
    >
      Download PDF
    </a>
    <i
      className="pdf fa fa-file-pdf-o"
    />
  </div>
</div>
`;
